Parts of project complete: EDA, preprocessing, and forward pass of convolutional layer

--- a/MLEnggCoop_TakeHomeAssignment_Docket/EDA.ipynb
+++ b/MLEnggCoop_TakeHomeAssignment_Docket/EDA.ipynb
@@ -2,14 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
-    "ExecuteTime": {
-     "end_time": "2024-10-27T07:26:50.295767Z",
-     "start_time": "2024-10-27T07:26:50.273094Z"
-    }
+    "is_executing": true
    },
    "outputs": [],
    "source": [
